--- a/to_do/Templates/Layouts/base.html
+++ b/to_do/Templates/Layouts/base.html
@@ -4,30 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href={% url 'home' %}>ToDoApp</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            {% if user.is_authenticated %}
+              <a class="nav-link active" aria-current="page" href={% url 'home' %}>Home</a>
+              <a class="nav-link" href={% url 'project' %}>Proyectos</a>
+              <a class="nav-link" href={% url 'logout' %}>Logout</a>
+              <aside>
+                {{user}}
+                </aside>
+            {% else %}
+              <a class="nav-link " href={% url 'sigin' %}>Login</a>
+              <a class="nav-link "  href={% url 'singup' %}>Singup</a>
+            {% endif %}
+            </div>
+          </div>
+        </div>
+      </nav>
 
-    <nav>
-        {% if user.is_authenticated %}
-        <a href= {% url 'home' %}>ToDoApp</a>
-        <a href="">Proyectos</a>
-        <a href={% url 'logout' %}>Logout</a>
-        {% else %}
-        <a href= "/">ToDoApp</a>
-        <a href={% url 'sigin' %}>Login</a>
-        <a href={% url 'singup' %}>Singup</a>
-        {% endif %}
-        
-        
-    </nav>
-    {% if user.is_authenticated %}
-    <aside>
-    {{user}}
-    </aside>
-    {% endif %}
+    
+    
 
     {% block content %}
     
     {% endblock  %}
+   <!--
+     {% block card_resume_project %}
+    
+    {% include 'Layouts/card_resume_project.html' %}
+    
+    {% endblock card_resume_project %}
+   -->
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </body>
 </html>
